package service

import (
	"context"
	pb "github.com/wastill/petclinic/api/petclinic"
)

func (s *PetClinicServiceService) CreateVisit(ctx context.Context, req *pb.CreateVisitRequest) (*pb.CreateVisitReply, error) {
	return &pb.CreateVisitReply{}, nil
}
func (s *PetClinicServiceService) UpdateVisit(ctx context.Context, req *pb.UpdateVisitRequest) (*pb.UpdateVisitReply, error) {
	return &pb.UpdateVisitReply{}, nil
}
func (s *PetClinicServiceService) DeleteVisit(ctx context.Context, req *pb.DeleteVisitRequest) (*pb.DeleteVisitReply, error) {
	return &pb.DeleteVisitReply{}, nil
}
func (s *PetClinicServiceService) GetVisit(ctx context.Context, req *pb.GetVisitRequest) (*pb.GetVisitReply, error) {
	return &pb.GetVisitReply{}, nil
}
func (s *PetClinicServiceService) ListVisit(ctx context.Context, req *pb.ListVisitRequest) (*pb.ListVisitReply, error) {
	return &pb.ListVisitReply{}, nil
}
